--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="#">Loja</a></li>
 								<li><a href="#">Fornecedores</a></li>
 								<li><a href="#">blog</a></li>
-								<li><a href="contact.html">Contato</a></li>
+								<li><a href="#">Contato</a></li>
 							</ul>
 							<ul class="navbar_user">
 								<li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
