--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 						<!-- Product 1 -->
 
-						<div class="product-item center produtos">
+						<div class="product-item produtos">
 							<div class="product discount product_filter">
 
 								<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=esteeuquero-20&marketplace=amazon&region=BR&placement=B084XCCJNR&asins=B084XCCJNR&linkId=28f184b7039f64425de34cf824c10057&show_border=true&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
@@ -153,7 +153,7 @@
 
 						<!-- Product 2 -->
 
-						<div class="product-item center produtos">
+						<div class="product-item produtos">
 							<div class="product product_filter">
 		<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=esteeuquero-20&marketplace=amazon&region=BR&placement=B083ZJ1S2L&asins=B083ZJ1S2L&linkId=6163a1d72b81519d03b3b1b89d379158&show_border=false&link_opens_in_new_window=true&price_color=333333&title_color=0066c0&bg_color=ffffff">
     </iframe>
