--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<div class="col-md-4">
 					<div class="banner_item align-items-center" style="background-image:url(images/TREINAMENTO_2.png)">
 						<div class="banner_category">
-							<a href="#">Cursos / Treinamentos</a>
+							<a href="#">Cursos / Literatura </a>
 						</div>
 					</div>
 				</div>
@@ -396,14 +396,14 @@
 				<div class="col-lg-6">
 					<div class="newsletter_text d-flex flex-column justify-content-center align-items-lg-start align-items-md-center text-center">
 						<h4>Notícias</h4>
-						<p>Subscribe to our newsletter and get 20% off your first purchase</p>
+						<p>Inscreva-se para receber novidades...</p>
 					</div>
 				</div>
 				<div class="col-lg-6">
 					<form action="post">
 						<div class="newsletter_form d-flex flex-md-row flex-column flex-xs-column align-items-center justify-content-lg-end justify-content-center">
 							<input id="newsletter_email" type="email" placeholder="Your email" required="required" data-error="Valid email is required.">
-							<button id="newsletter_submit" type="submit" class="newsletter_submit_btn trans_300" value="Submit">subscribe</button>
+							<button id="newsletter_submit" type="submit" class="newsletter_submit_btn trans_300" value="Submit">Inscreva-se</button>
 						</div>
 					</form>
 				</div>
