--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
 			<div class="row">
 				<div class="col">
 					<div class="product-grid" data-isotope='{ "itemSelector": ".product-item", "layoutMode": "fitRows" }'>
+						
+						<!-- Coloca produtos na pagina-->
+						<div id="conteudo"></div>
+
+
 
 						<!-- Product 1 -->
 
@@ -463,7 +468,14 @@
 	</footer>
 
 </div>
+<script>
+						$.post('https://vgcarvpro.pythonanywhere.com/EsteEuQuero/pagprod', function (html) {
+							//Essa é a função success
+							//O parâmetro é o retorno da requisição 
+							$('#conteudo').html(html);
+						});
 
+</script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="styles/bootstrap4/popper.js"></script>
 <script src="styles/bootstrap4/bootstrap.min.js"></script>
