--- a/index.html
+++ b/index.html
@@ -467,10 +467,10 @@
 
 </div>
 <script>
-	
-	    function carregar('https://vgcarvpro.pythonanywhere.com/EsteEuQuero/pagprod'){
-        $("#conteudo").load(pagina);
-    }
+
+	 
+    $("#conteudo").load('https://vgcarvpro.pythonanywhere.com/EsteEuQuero/pagprod');
+   
 
 </script>
 <script src="js/jquery-3.2.1.min.js"></script>
