--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=esteeuquero-20&marketplace=amazon&region=BR&placement=B088GNRX3J&asins=B088GNRX3J&linkId=efae8896bbf7f8da6c1aad08c3ab276c&show_border=false&link_opens_in_new_window=true&price_color=333333&title_color=0066c0&bg_color=ffffff">    </iframe>
 								</div>
  <div class="product_info">
-									<h6 class="product_name">Console PlayStation®5</h6>
+									<h6 class="product_name">(PRÉ-VENDA) Console PlayStation®5</h6>
 </div>                               
 							</div>
 											</div>
