--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=esteeuquero-20&marketplace=amazon&region=BR&placement=B088GNW267&asins=B088GNW267&linkId=80d3ac67d0d30ad5da6aac1c13e2e621&show_border=false&link_opens_in_new_window=true&price_color=333333&title_color=0066c0&bg_color=ffffff">    </iframe>
 								</div>
  <div class="product_info">
-									<h6 class="product_name">Controle DualSense - PlayStation 5</h6>
+									<h6 class="product_name">(PRÉ-VENDA) Controle DualSense - PlayStation 5</h6>
 </div>                               
 							</div>
 											</div>
@@ -228,7 +228,7 @@
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=esteeuquero-20&marketplace=amazon&region=BR&placement=B08CWL62PL&asins=B08CWL62PL&linkId=aed29d1bf4b31ee03d405a1eba7f3a45&show_border=false&link_opens_in_new_window=true&price_color=333333&title_color=0066c0&bg_color=ffffff">    </iframe>
 								</div>
  <div class="product_info">
-									<h6 class="product_name">Controle de Mídia - PlayStation 5</h6>
+									<h6 class="product_name">(PRÉ-VENDA) Controle de Mídia - PlayStation 5</h6>
 </div>                               
 							</div>
 											</div>
@@ -241,7 +241,7 @@
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=esteeuquero-20&marketplace=amazon&region=BR&placement=B08CWHVZJ4&asins=B08CWHVZJ4&linkId=5a4363962def720e113160526c328c60&show_border=false&link_opens_in_new_window=true&price_color=333333&title_color=0066c0&bg_color=ffffff">    </iframe>
 								</div>
  <div class="product_info">
-									<h6 class="product_name">Câmera HD - PlayStation 5</h6>
+									<h6 class="product_name">(PRÉ-VENDA) Câmera HD - PlayStation 5</h6>
 </div>                               
 							</div>
 											</div>
