--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		</div>
 	</div>
 
-	<!-- Banner -->
+	<!-- Banner 
 
 	<div class="banner">
 		<div class="container">
@@ -111,7 +111,7 @@
 			</div>
 		</div>
 	</div>
-
+-->
 	<!-- New Arrivals -->
 
 	<div class="new_arrivals">
