--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="row">
 					<div class="col-lg-12 text-right">
 						<div class="logo_container">
-							<a href="#"><span>Este eu Quero</span></a>
+							<a href="#"><img src="logo_eeq.png" /></a>
 						</div>
 						<nav class="navbar">
 							<ul class="navbar_menu">
