--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="footer_nav_container">
-						<div class="cr">©2020 EsteEuQuero. Feito com o template <a href="#">Colorlib</a></div>
+						<div class="cr">©2020 EsteEuQuero. Feito com base no template <a href="#">Colorlib</a></div>
 					</div>
 				</div>
 			</div>
