--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 	<!-- Slider -->
 
-	<div class="main_slider" style="background-image:url(images/ENCOMENDAS.jpg)">
+	<div class="main_slider" style="background-image:url(images/Banner2.jpg)">
 		<div class="container fill_height">
 			<div class="row align-items-center fill_height">
 				<div class="col">
