--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
 				<div class="col-lg-6">
 					<div class="footer_nav_container d-flex flex-sm-row flex-column align-items-center justify-content-lg-start justify-content-center text-center">
 						<ul class="footer_nav">
-							<li><a href="#">FAQs</a></li>
+							<li><a href="loma.html">FAQs</a></li>
 						</ul>
 					</div>
 				</div>
