--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 	<!-- Slider -->
 
-	<div class="main_slider" style="background-image:url(images/Banner2.jpg)">
+	<div class="main_slider" style="background-image:url(https://www.motorola.com.br/smartphone-motorola-edge/p)">
 		<div class="container fill_height">
 			<div class="row align-items-center fill_height">
 				<div class="col">
