--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 	<!-- Slider -->
 
-	<div class="main_slider" style="background-image:url(https://www.motorola.com.br/smartphone-motorola-edge/p)">
+	<div class="main_slider" style="background-image:url(https://brmotorola.vteximg.com.br/arquivos/ids/166103/c-black-esquenta-a-partir-desktop.png?v=637402189759900000)">
 		<div class="container fill_height">
 			<div class="row align-items-center fill_height">
 				<div class="col">
