--- a/index.html
+++ b/index.html
@@ -68,21 +68,34 @@
 	</div>
 
 	<!-- Slider -->
+	<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+		  <div class="carousel-item active">
+			<img class="d-block w-100" src="https://brmotorola.vteximg.com.br/arquivos/ids/166103/c-black-esquenta-a-partir-desktop.png?v=637402189759900000" alt="First slide">
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src="https://brmotorola.vteximg.com.br/arquivos/ids/166104/c-black-esquenta-edge-desktop.png?v=637402190272300000" alt="Second slide">
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src="https://brmotorola.vteximg.com.br/arquivos/ids/166105/c-black-esquenta-fusion-desktop.png?v=637402191206630000" alt="Third slide">
+		  </div>
+		</div>
+	  </div>
 
-	<div class="main_slider" style="background-image:url(https://brmotorola.vteximg.com.br/arquivos/ids/166103/c-black-esquenta-a-partir-desktop.png?v=637402189759900000)">
+<!--	<div class="main_slider" style="background-image:url(https://brmotorola.vteximg.com.br/arquivos/ids/166103/c-black-esquenta-a-partir-desktop.png?v=637402189759900000)">
 		<div class="container fill_height">
 			<div class="row align-items-center fill_height">
 				<div class="col">
 					<div class="main_slider_content">
-						<!-- <h6>Spring / Summer Collection 2017</h6>
+						 <h6>Spring / Summer Collection 2017</h6>
 						<h1>Get up to 30% Off New Arrivals</h1>
-						<div class="red_button shop_now_button"><a href="#">shop now</a></div> -->
+						<div class="red_button shop_now_button"><a href="#">shop now</a></div> 
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
+-->
 	<!-- Banner 
 
 	<div class="banner">
