--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 	<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
-			<a href="https://oferta.vc/v2/311fcaa027e"><img class="d-flex w-75 justify-content-center" src="https://brmotorola.vteximg.com.br/arquivos/ids/166103/c-black-esquenta-a-partir-desktop.png?v=637402189759900000" alt="First slide"></a>
+			<a href="https://oferta.vc/v2/311fcaa027e"><img class="d-flex justify-content-center" src="https://brmotorola.vteximg.com.br/arquivos/ids/166103/c-black-esquenta-a-partir-desktop.png?v=637402189759900000" alt="First slide"></a>
 		  </div>
 		  <div class="carousel-item">
-			<a href="https://oferta.vc/v2/311fcaa027e"><img class="d-flex w-75 justify-content-center" src="https://brmotorola.vteximg.com.br/arquivos/ids/166104/c-black-esquenta-edge-desktop.png?v=637402190272300000" alt="Second slide"></a>
+			<a href="https://oferta.vc/v2/311fcaa027e"><img class="d-flex justify-content-center" src="https://brmotorola.vteximg.com.br/arquivos/ids/166104/c-black-esquenta-edge-desktop.png?v=637402190272300000" alt="Second slide"></a>
 		  </div>
 		  <div class="carousel-item">
-			<a href="https://oferta.vc/v2/311fcaa027e"><img class="d-flex w-75 justify-content-center" src="https://brmotorola.vteximg.com.br/arquivos/ids/166105/c-black-esquenta-fusion-desktop.png?v=637402191206630000" alt="Third slide"></a>
+			<a href="https://oferta.vc/v2/311fcaa027e"><img class="d-flex justify-content-center" src="https://brmotorola.vteximg.com.br/arquivos/ids/166105/c-black-esquenta-fusion-desktop.png?v=637402191206630000" alt="Third slide"></a>
 		  </div>
 		</div>
 	  </div>
