--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
 		</div>
 	  </div>
 
+<!-- Vitrine Inteligente Lomadee -->
+<div class="g3S6Z4x927jE" style="width: 120px; height: 240px">
+	<script type="text/javascript" class="lomadee-recommender-script" src="//ad.lomadee.com/v1/eyJwdWJsaXNoZXJJZCI6MjI5NTYzNTIsInNpdGVJZCI6MzQxNDIwODQsInNvdXJjZUlkIjozNjg3NTU2MH0%3D.js?w=120&h=240&notStoreId=5936,5937,7349,6078&notSegmentId=27,28"></script>
+	</div><!-- Vitrine Inteligente Lomadee -->
+
 <!--	<div class="main_slider" style="background-image:url(https://brmotorola.vteximg.com.br/arquivos/ids/166103/c-black-esquenta-a-partir-desktop.png?v=637402189759900000)">
 		<div class="container fill_height">
 			<div class="row align-items-center fill_height">
