--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
 		</div>
 	  </div>
 
-<!-- Vitrine Inteligente Lomadee -->
-<div class="g3S6Z4x927jE" style="width: 120px; height: 240px">
-	<script type="text/javascript" class="lomadee-recommender-script" src="//ad.lomadee.com/v1/eyJwdWJsaXNoZXJJZCI6MjI5NTYzNTIsInNpdGVJZCI6MzQxNDIwODQsInNvdXJjZUlkIjozNjg3NTU2MH0%3D.js?w=120&h=240&notStoreId=5936,5937,7349,6078&notSegmentId=27,28"></script>
-	</div><!-- Vitrine Inteligente Lomadee -->
+
 
 <!--	<div class="main_slider" style="background-image:url(https://brmotorola.vteximg.com.br/arquivos/ids/166103/c-black-esquenta-a-partir-desktop.png?v=637402189759900000)">
 		<div class="container fill_height">
@@ -165,7 +162,10 @@
 						<div class="product-item automotivo">
 							<div class="product discount product_filter">
 								<div class="product_image">
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=esteeuquero-20&marketplace=amazon&region=BR&placement=B07YN8SCNQ&asins=B07YN8SCNQ&linkId=34c49f7cad089ab50501bec4ef1ba73d&show_border=false&link_opens_in_new_window=true&price_color=333333&title_color=0066c0&bg_color=ffffff">    </iframe>
+<!-- Vitrine Inteligente Lomadee -->
+<div class="g3S6Z4x927jE" style="width: 120px; height: 240px">
+	<script type="text/javascript" class="lomadee-recommender-script" src="//ad.lomadee.com/v1/eyJwdWJsaXNoZXJJZCI6MjI5NTYzNTIsInNpdGVJZCI6MzQxNDIwODQsInNvdXJjZUlkIjozNjg3NTU2MH0%3D.js?w=120&h=240&notSegmentId=61,59,23,41,1,65,3,52,63,26,8,9,56,37,15,70,53,69,13,51,16,42,40,45,21,47,43,46,44,25,18,39,30,71,6,19,62,50,31,54,32,48,20"></script>
+	</div><!-- Vitrine Inteligente Lomadee -->
 								</div>
  <div class="product_info">
 									<h6 class="product_name">Rack de Teto Uno 2010 2011 2012 2013 2014 2015 a 2020 Preto</h6>
@@ -191,8 +191,10 @@
 						<div class="product-item consoles">
 							<div class="product discount product_filter">
 								<div class="product_image">
-									<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=esteeuquero-20&marketplace=amazon&region=BR&placement=B07P6YCKRX&asins=B07P6YCKRX&linkId=f90c224d8760e644a96d269bc825d3d9&show_border=false&link_opens_in_new_window=true&price_color=333333&title_color=0066c0&bg_color=ffffff">
-									</iframe>
+<!-- Vitrine Inteligente Lomadee -->
+<div class="g3S6Z4x927jE" style="width: 120px; height: 240px">
+	<script type="text/javascript" class="lomadee-recommender-script" src="//ad.lomadee.com/v1/eyJwdWJsaXNoZXJJZCI6MjI5NTYzNTIsInNpdGVJZCI6MzQxNDIwODQsInNvdXJjZUlkIjozNjg3NTU2MH0%3D.js?w=120&h=240&notSegmentId=61,59,23,41,1,65,3,52,63,26,8,9,56,37,15,70,53,69,13,51,16,42,40,45,21,47,43,46,44,25,18,39,30,71,6,19,62,50,31,54,32,48,20"></script>
+	</div><!-- Vitrine Inteligente Lomadee -->
 								</div>
  <div class="product_info">
 									<h6 class="product_name">Console PlayStation 4 Pro 4K 1TB</h6>
@@ -205,7 +207,10 @@
 						<div class="product-item consoles">
 							<div class="product discount product_filter">
 								<div class="product_image">
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=esteeuquero-20&marketplace=amazon&region=BR&placement=B088GNRX3J&asins=B088GNRX3J&linkId=efae8896bbf7f8da6c1aad08c3ab276c&show_border=false&link_opens_in_new_window=true&price_color=333333&title_color=0066c0&bg_color=ffffff">    </iframe>
+<!-- Vitrine Inteligente Lomadee -->
+<div class="g3S6Z4x927jE" style="width: 120px; height: 240px">
+	<script type="text/javascript" class="lomadee-recommender-script" src="//ad.lomadee.com/v1/eyJwdWJsaXNoZXJJZCI6MjI5NTYzNTIsInNpdGVJZCI6MzQxNDIwODQsInNvdXJjZUlkIjozNjg3NTU2MH0%3D.js?w=120&h=240&notSegmentId=61,59,23,41,1,65,3,52,63,26,8,9,56,37,15,70,53,69,13,51,16,42,40,45,21,47,43,46,44,25,18,39,30,71,6,19,62,50,31,54,32,48,20"></script>
+	</div><!-- Vitrine Inteligente Lomadee -->
 								</div>
  <div class="product_info">
 									<h6 class="product_name">(PRÉ-VENDA) Console PlayStation®5</h6>
