--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 		<div class="hamburger_close"><i class="fa fa-times" aria-hidden="true"></i></div>
 	
 	</div>
-
-	<!-- Slider -->
+<!-- LOMADEE - BEGIN -->
+<script src="//ad.lomadee.com/banners/script.js?sourceId=36899314&dimension=22&height=600&width=1200&method=0" type="text/javascript" language="javascript"></script>
+<!-- LOMADEE - END -->
+	<!-- Slider 
 	<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
@@ -80,7 +82,7 @@
 			<a class="d-flex justify-content-center" href="https://oferta.vc/v2/311fcaa027e"><img class="align-self-center" src="https://brmotorola.vteximg.com.br/arquivos/ids/166105/c-black-esquenta-fusion-desktop.png?v=637402191206630000" alt="Third slide"></a>
 		  </div>
 		</div>
-	  </div>
+	  </div>-->
 
 <!--	<div class="main_slider" style="background-image:url(https://brmotorola.vteximg.com.br/arquivos/ids/166103/c-black-esquenta-a-partir-desktop.png?v=637402189759900000)">
 		<div class="container fill_height">
